k8s/namespace-configmap-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retailpulse
  labels:
    name: retailpulse
